--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,11 @@
 			<version>1.18.24</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 
 	</dependencies>
 
