--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Data Source Properties
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://rrb.stz.ddns.bulsat.com:3306/dog_hotel?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/dog_hotel?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Aa@153759
 
