--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,16 @@
 			<artifactId>flying-saucer-pdf</artifactId>
 			<version>9.1.20</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.librepdf</groupId>
+			<artifactId>openpdf</artifactId>
+			<version>1.3.26</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.11.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
